--- a/k8s-example-yamls/pv.yaml
+++ b/k8s-example-yamls/pv.yaml
@@ -1,15 +1,15 @@
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: pv-1
+  name: pv-2
   labels:
     type: local
 spec:
   storageClassName: manual
   capacity:
-    storage: 1Gi
+    storage: 2Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   hostPath:
-    path: "/data/pv-1/"
+    path: "/data/pv-2/"
 
